--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -5,10 +5,18 @@ jobs:
   cpp-linter:
     runs-on: ubuntu-latest
     steps:
-      - name: Checking out Reoi
+      - name: Checking out Repo
         uses: actions/checkout@v3
 
       - name: Linting C++ files
         uses: cpp-linter/cpp-linter-action@v2
+
+      - name: Build C++ project
+        uses: nicledomaS/cmake_build_action@v1.4
+        with:
+          submodule_update: ON
+          run_tests: ON
+          unit_test_build: -Dtest=ON
+          create_package: ON
         env:
           DEFAULT_BRANCH: main
