--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -4,6 +4,7 @@ on : [push]
 jobs:
   cpp-linter:
     runs-on: ubuntu-latest
+    language: cpp
     steps:
       - name: Checking out Repo
         uses: actions/checkout@v3
@@ -11,12 +12,22 @@ jobs:
       - name: Linting C++ files
         uses: cpp-linter/cpp-linter-action@v2
 
-      - name: Build C++ project
-        uses: nicledomaS/cmake_build_action@v1.4
-        with:
-          submodule_update: ON
-          run_tests: ON
-          unit_test_build: -Dtest=ON
-          create_package: ON
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake g++
+          
+      - name: Build
+        run: |
+          for dir in */; do
+            if [ -e "$dir/CMakeLists.txt" ]; then
+              echo "Building $dir..."
+              mkdir -p "$dir/build"
+              cd "$dir/build"
+              cmake ..
+              make
+              cd ../..
+            fi
+          done
         env:
           DEFAULT_BRANCH: main
